logs/products.ploneinvite.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/PloneInvite'...
Listing './lib/python3.5/site-packages/Products/PloneInvite/Extensions'...
Compiling './lib/python3.5/site-packages/Products/PloneInvite/PloneInvite.py'...
***   File "./lib/python3.5/site-packages/Products/PloneInvite/PloneInvite.py", line 217
    raise InviteError, _(u"You have no invitations")
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/PloneInvite/dtml'...
Listing './lib/python3.5/site-packages/Products/PloneInvite/i18n'...
Listing './lib/python3.5/site-packages/Products/PloneInvite/skins'...
Listing './lib/python3.5/site-packages/Products/PloneInvite/skins/ploneinvite'...
Compiling './lib/python3.5/site-packages/Products/PloneInvite/skins/ploneinvite/get_portal_invite_ftests.py'...
***   File "./lib/python3.5/site-packages/Products/PloneInvite/skins/ploneinvite/get_portal_invite_ftests.py", line 69
    return suite
               ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/PloneInvite/tests'...
Compiling './lib/python3.5/site-packages/Products/PloneInvite/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/PloneInvite/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.PloneInvite-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
